--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.6.10",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
+    "react-date-picker": "^8.4.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.3.1",
