--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.6.10",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
