--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "3.10.6",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.10",
+    "framer-motion": "3.10.6",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
@@ -20,6 +21,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
+    "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
