--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@chakra-ui/system": "^1.12.1",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "3.10.6",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.10",
+    "framer-motion": "3.10.6",
+    "mdb-react-ui-kit": "^3.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.1",
     "react-calendar": "^3.7.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
