--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.6.10",
     "framer-motion": "3.10.6",
     "mdb-react-ui-kit": "^3.0.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.1",
     "react-calendar": "^3.7.0",
