--- a/package.json
+++ b/package.json
@@ -1,60 +1,58 @@
 {
-  "name": "mind-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@chakra-ui/icons": "^1.1.7",
-    "@chakra-ui/react": "^1.8.6",
-    "@chakra-ui/system": "^1.12.1",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "@material-ui/core": "^4.12.4",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
-    "chart.js": "^3.8.0",
-    "firebase": "^9.6.10",
-    "framer-motion": "3.10.6",
-    "mdb-react-ui-kit": "^3.0.0",
-    "moment": "^2.29.3",
-    "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.3.1",
-    "react-calendar": "^3.7.0",
-    "react-chartjs-2": "^4.1.0",
-    "react-chartjs2": "^1.2.1",
-    "react-datepicker": "^4.7.0",
-    "react-dom": "^17.0.2",
-    "react-firebase-hooks": "^5.0.3",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "mind-app",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@chakra-ui/icons": "^1.1.7",
+		"@chakra-ui/react": "^1.8.6",
+		"@chakra-ui/system": "^1.12.1",
+		"@emotion/react": "^11.8.2",
+		"@emotion/styled": "^11.8.1",
+		"@material-ui/core": "^4.12.4",
+		"@testing-library/jest-dom": "^5.16.2",
+		"@testing-library/react": "^12.1.4",
+		"@testing-library/user-event": "^13.5.0",
+		"bootstrap": "^5.1.3",
+		"chart.js": "^3.8.0",
+		"firebase": "^9.6.10",
+		"framer-motion": "3.10.6",
+		"mdb-react-ui-kit": "^3.0.0",
+		"moment": "^2.29.3",
+		"prop-types": "^15.8.1",
+		"react": "^17.0.2",
+		"react-bootstrap": "^2.3.1",
+		"react-calendar": "^3.7.0",
+		"react-chartjs-2": "^4.1.0",
+		"react-chartjs2": "^1.2.1",
+		"react-datepicker": "^4.7.0",
+		"react-dom": "^17.0.2",
+		"react-firebase-hooks": "^5.0.3",
+		"react-icons": "^4.3.1",
+		"react-router-dom": "^6.2.2",
+		"react-scripts": "^5.0.1",
+		"styled-components": "^5.3.5",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"eslint": "^8.22.0",
+		"eslint-plugin-react": "^7.30.1"
+	}
 }
