--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,13 @@
 	"dependencies": {
 		"@types/express": "^4.17.13",
 		"express": "^4.18.1",
-		"ts-node-dev": "^2.0.0"
+		"pg": "^8.8.0",
+		"reflect-metadata": "^0.1.13",
+		"ts-node-dev": "^2.0.0",
+		"typeorm": "^0.3.9"
 	},
 	"devDependencies": {
+		"@types/node": "^18.7.15",
 		"@typescript-eslint/eslint-plugin": "^5.36.1",
 		"@typescript-eslint/parser": "^5.36.1",
 		"eslint": "^8.23.0",
