--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
 		"bootstrap": "^5.1.3",
 		"chart.js": "^3.8.0",
 		"enzyme": "^3.11.0",
-		"firebase": "^9.6.10",
+		"firebase": "^9.11.0",
 		"framer-motion": "3.10.6",
 		"mdb-react-ui-kit": "^3.0.0",
 		"moment": "^2.29.3",
@@ -56,6 +56,7 @@
 	"devDependencies": {
 		"@types/jest": "^29.0.0",
 		"eslint": "^8.22.0",
-		"eslint-plugin-react": "^7.30.1"
+		"eslint-plugin-react": "^7.30.1",
+		"firestore-jest-mock": "^0.19.0"
 	}
 }
