--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,7 +56,6 @@
 	"devDependencies": {
 		"@types/jest": "^29.0.0",
 		"eslint": "^8.22.0",
-		"eslint-plugin-react": "^7.30.1",
-		"firestore-jest-mock": "^0.19.0"
+		"eslint-plugin-react": "^7.30.1"
 	}
 }
