--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,7 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"test:coverage": "npm test -- --coverage --watchAll=false",
+		"test:coverage": "npm test -- --coverage --watchAll=false --collectCoverageFrom=!src/*.js",
 		"eject": "react-scripts eject"
 	},
 	"browserslist": {
