--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,8 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"test:coverage": "npm test -- --coverage --watchAll=false",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"cypress:open": "cypress open"
 	},
 	"browserslist": {
 		"production": [
@@ -55,6 +56,7 @@
 	},
 	"devDependencies": {
 		"@types/jest": "^29.0.0",
+		"cypress": "^10.11.0",
 		"eslint": "^8.22.0",
 		"eslint-plugin-react": "^7.30.1"
 	}
