--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,7 +54,6 @@
 		]
 	},
 	"devDependencies": {
-		"@types/jest": "^29.0.0",
-		"eslint-plugin-react": "^7.30.1"
+		"@types/jest": "^29.0.0"
 	}
 }
