--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
         cache: 'npm'
         cache-dependency-path: "**/package-lock.json"
     - run: npm ci
-    - run: npm test
+    - run: CI=true npm test
   integration:
     runs-on: ubuntu-latest
     defaults:
