--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"test": "react-scripts test --detectOpenHandles",
 		"test:coverage": "npm test -- --coverage --watchAll=false --collectCoverageFrom=!src/*.js",
 		"eject": "react-scripts eject"
 	},
