--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,8 +56,6 @@
 	},
 	"devDependencies": {
 		"@types/jest": "^29.0.0",
-		"cypress": "^10.11.0",
-		"eslint": "^8.22.0",
-		"eslint-plugin-react": "^7.30.1"
+		"cypress": "^10.11.0"
 	}
 }
