--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
 	"name": "mind-app",
 	"version": "0.1.0",
 	"private": true,
+	"type": "module",
 	"dependencies": {
 		"@chakra-ui/icons": "^1.1.7",
 		"@chakra-ui/react": "^1.8.6",
