--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,3 +39,13 @@ jobs:
       with:
         collection: postman_collection.json
         environment: postman_environment.json
+  e2e:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Cypress run
+        uses: cypress-io/github-action@v4.x.x # use the explicit version number
+
