--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
 		"@testing-library/user-event": "^13.5.0",
 		"bootstrap": "^5.1.3",
 		"chart.js": "^3.8.0",
+		"cypress-firebase": "^2.2.2",
 		"enzyme": "^3.11.0",
 		"firebase": "^9.11.0",
+		"firebase-admin": "^11.3.0",
 		"framer-motion": "3.10.6",
 		"mdb-react-ui-kit": "^3.0.0",
 		"moment": "^2.29.3",
