--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,5 +50,5 @@ jobs:
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
-        uses: cypress-io/github-action@v4.x.x # use the explicit version number
+        uses: cypress-io/github-action@v4.2.0 # use the explicit version number
 
