--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,4 +51,6 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v4.2.0 # use the explicit version number
+        with: 
+          - working-directory: frontend
 
