--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -52,5 +52,5 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v4.2.0 # use the explicit version number
         with: 
-          - working-directory: frontend
+          - working-directory: ./frontend
 
