--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "mind-app",
 	"version": "0.1.0",
+	"type": "module",
 	"private": true,
 	"dependencies": {
 		"@chakra-ui/icons": "^1.1.7",
